--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -11,7 +11,7 @@ Pour appréhender le plugin nous allons développer dans cette partie la créati
 * Mono-cadre (paramètres par défaut).
 * On configura un style avec une bordure et une ombre pour un rendu visuel.
 
-Nous allons commencer par créer un thème, cliquer sur image:../images/ajout.png[] .Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition_dun_bouton,boutons>> et le <<popover_du_style,style>>. +
+Nous allons commencer par créer un thème, cliquer sur image:../images/ajout.png[] .Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition,boutons>> et le <<popover_de_style,style>>. +
 Cliquez sur *Boutons* et appuyez sur image:../images/plus.png[] pour créer un nouveau bouton. Notre premier bouton est un sous-menu, entrez +RdC+ dans le champ *Nom* et cliquez sur *Sous-menu* pour affichez les sous-entrées, cliquez sur image:../images/plus.png[] pour ajouter une autre sous-entrée, remplissez chaque entrée par +Salon+ et +Cuisine+ puis validez, notre premier bouton est créé. Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et validez. +
 
 Maintenant que nos boutons sont créés, nous allons appliquer un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi :
@@ -94,7 +94,7 @@ Si vous cliquez sur le cadre, un popover pour la configuration du cadre apparaî
 image::../images/popovercadre.png[]
 {nbsp} +
 
-Changeons +Titre+ par +Salon+, et sélectionnons l'image téléchargée avec le sélecteur *Image*.Pour le fonctionnement complet de ce popover voir <<popover_du_cadre,Popover du Cadre>>
+Changeons +Titre+ par +Salon+, et sélectionnons l'image téléchargée avec le sélecteur *Image*.Pour le fonctionnement complet de ce popover voir <<popover_des_cadres,Popover des Cadres>>
 Il suffit de sauvegarder, et d'utiliser le bouton *Bootstrap* pour mettre à jour la page secondaire _Salon_ dans le mode Design, la dernière étape étant de placer les widgets dans le mode Design. Répetons ces étapes pour les deux autres pièces. +
 
 [icon="../images/tip.png"]
@@ -122,7 +122,7 @@ image::../images/generaldemo.png[]
 
 '''
 ===== Les lignes SVG
-Bien qu'à cette étape votre Design soit fonctionnel, il m'est apparu intéressant de fournir un système qui permettrait de localiser dans la pièce ou est votre widget (ou virtuel, etc...), et c'est tout naturellement que j'ai mis en place les *lignes SVG*. A partir du <<popover_du_cadre,Popover du Cadre>>, cliquez sur image:../images/plusb.png[] une nouvelle *ligne SVG* va apparaître en haut à droite de votre cadre et un nouveau popover est disponible.
+Bien qu'à cette étape votre Design soit fonctionnel, il m'est apparu intéressant de fournir un système qui permettrait de localiser dans la pièce ou est votre widget (ou virtuel, etc...), et c'est tout naturellement que j'ai mis en place les *lignes SVG*. A partir du <<popover_des_cadres,Popover des Cadres>>, cliquez sur image:../images/plusb.png[] une nouvelle *ligne SVG* va apparaître en haut à droite de votre cadre et un nouveau popover est disponible.
 
 image::../images/popoversvg.png[]
 {nbsp} +
