--- a/doc/fr_FR/partie_3.asciidoc
+++ b/doc/fr_FR/partie_3.asciidoc
@@ -8,12 +8,12 @@ Cliquez sur le bouton ci-dessus pour accéder au gestionnaires d'images.
 {nbsp} +
 
 image::../images/gestionnaire2.png[]
-Le gestionnaire permet de gérer des catégories, celle par défaut est utilisé par le plugin, seul les images importées dans cette catégorie seront accessible dans les thèmes. Pour créer une nouvelle catégorie cliquez sur image:../images/gestionnaire3.png[options="responsive"]. +
-Pour importer une image cliquez sur image:../images/gestionnaire4.png[options="responsive"], elle sera importé dans la catégorie sélectionné. +
+Le gestionnaire permet de gérer des catégories, celle par défaut est utilisé par le plugin, seul les images importées dans cette catégorie seront accessible dans les thèmes. Pour créer une nouvelle catégorie cliquez sur image:../images/gestionnaire3.png[]. +
+Pour importer une image cliquez sur image:../images/gestionnaire4.png[], elle sera importé dans la catégorie sélectionné. +
 {nbsp} +
 
 image::../images/gestionnaire5.png[]
-Une fois l'image importé, image:../images/cadretrash.png[options="responsive"] permet de la supprimer, image:../images/gestionnaire6.png[options="responsive"] ouvrira une boite dialogue donnant les infos suivantes :
+Une fois l'image importé, image:../images/cadretrash.png[] permet de la supprimer, image:../images/gestionnaire6.png[] ouvrira une boite dialogue donnant les infos suivantes :
 
 * *URL*: Construit pour être utiliser comme lien locale Jeedom à utilise dans une balise directement par exemple un balise +<img>+.
 * *CSS* : construit pour être copier coller dans une classe +CSS+ ou un attribut style, pour mettre au choix dans un widget, un design voir sur le +custom.css+.
