--- a/doc/fr_FR/partie_2.asciidoc
+++ b/doc/fr_FR/partie_2.asciidoc
@@ -159,7 +159,7 @@ Valider permet de revenir au <<popover_du_menu,popover Menu>>. +
 {nbsp} +
 
 '''
-[[ajoutedition]]
+anchor:ajoutedition[]
 ===== Ajout/Edition d'un Bouton
 image:../images/creabouton.png[] image:../images/editbouton.png[]
 Indiqué le *Nom* du bouton, choisissez sa *Couleur* +
