--- a/doc/fr_FR/partie_1.asciidoc
+++ b/doc/fr_FR/partie_1.asciidoc
@@ -1,3 +1,5 @@
+:imagesdir: ../images
+
 '''
 ==== Création
 
@@ -11,8 +13,8 @@ Pour appréhender le plugin nous allons développer dans cette partie la créati
 * Mono-cadre (paramètres par défaut).
 * On configura un style avec une bordure et une ombre pour un rendu visuel.
 
-Nous allons commencer par créer un thème, cliquer sur image:../images/ajout.png[] .Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition,boutons>> et le <<popover_de_style,style>>. +
-Cliquez sur *Boutons* et appuyez sur image:../images/plus.png[] pour créer un nouveau bouton. Notre premier bouton est un sous-menu, entrez +RdC+ dans le champ *Nom* et cliquez sur *Sous-menu* pour affichez les sous-entrées, cliquez sur image:../images/plus.png[] pour ajouter une autre sous-entrée, remplissez chaque entrée par +Salon+ et +Cuisine+ puis validez, notre premier bouton est créé. Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et validez. +
+Nous allons commencer par créer un thème, cliquer sur image:ajout.png[] .Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition,boutons>> et le <<popover_de_style,style>>. +
+Cliquez sur *Boutons* et appuyez sur image:plus.png[] pour créer un nouveau bouton. Notre premier bouton est un sous-menu, entrez +RdC+ dans le champ *Nom* et cliquez sur *Sous-menu* pour affichez les sous-entrées, cliquez sur image:plus.png[] pour ajouter une autre sous-entrée, remplissez chaque entrée par +Salon+ et +Cuisine+ puis validez, notre premier bouton est créé. Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et validez. +
 
 Maintenant que nos boutons sont créés, nous allons appliquer un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi :
 
@@ -23,19 +25,19 @@ Sauvegardez votre thème maintenant. +
 
 Voici le résultat: +
 
-image::../images/démo1.png[]
+image::démo1.png[]
 {nbsp} +
 
 '''
 ==== Design et Bootstrap
-Le but du plugin étant la création d'une structure pour le mode Design, nous allons aborder ici les deux boutons les plus importants du plugin: image:../images/bdesign.png[] et image:../images/bbootstrap.png[] +
+Le but du plugin étant la création d'une structure pour le mode Design, nous allons aborder ici les deux boutons les plus importants du plugin: image:bdesign.png[] et image:bbootstrap.png[] +
 
 '''
 ===== Design
 Ce bouton va permettre de créer les pages du mode Design, la page principale au format du thème et les pages secondaires au format du cadre principal. A chaque fois que vous charger un thème le plugin vérifié que les pages sont créer, si toutes les pages existent le bouton sera grisé. On peut dégriser le bouton facilement il suffit de modifier la taille de la fenêtre principale. Le bouton est dégrisé aussi dés qu'on rajoute un bouton.
 
-image::../images/planok.png[]
-image::../images/plannotok.png[]
+image::planok.png[]
+image::plannotok.png[]
 {nbsp} +
 
 [icon="../images/important.png"]
@@ -50,7 +52,7 @@ Si le bouton est dégrisé c'est que des modifications ont été apportées au t
 
 Voici le résultat du thème que nous développons: +
 
-image::../images/designok.png[]
+image::designok.png[]
 {nbsp} +
 
 Vous pouvez constatez que le plugin crée une page supplémentaire, appelez +Général+ elle correspond à la page secondaire du bouton *home* qui est la page de présentation de votre mode Design. +
@@ -61,7 +63,7 @@ Vous pouvez constatez que le plugin crée une page supplémentaire, appelez +Gé
 ===== Bootstrap
 Arrivez à cette étape toutes les pages doivent être créées, ce bouton va permettre d'injecté le code dans la page principale pour pouvoir gérer tout votre Design, après toutes modifications il suffira de cliquez sur ce bouton pour mettre à jour la fenêtre principale. +
 
-image::../images/bootstrapok.png[]
+image::bootstrapok.png[]
 {nbsp} +
 
 [icon="../images/tip.png"]
@@ -75,7 +77,7 @@ Si la page de la fenêtre principale n'existe pas le bouton restera grisé, cliq
 Le plugin devait s'arrêter à la création de la page principale, des pages secondaires et de l'injection du code Bootstrap sur la page principale, mais il est apparu important de pouvoir gérer les pages secondaires à partir du plugin pour pouvoir aussi en contrôler le fonctionnement. +
 Les images qui serviront aux pages secondaires seront rajoutées avec le <<gestionnaire_d_8217_images,Gestionnaire d'images>>, pour notre thème elles seront au format de notre cadre principale et seront créés à l'aide du logiciel link:http://www.sweethome3d.com/fr/[SweetHome 3D] +
 
-image::../images/secondaires.png[]
+image::secondaires.png[]
 {nbsp} +
 
 Ce chapitre à pour but de montrer comment configurer une page secondaire, Le bouton *Ajouter* est grisé puisque nous sommes en configuration +mono-cadre+, la configuration +multi-cadres+ est identique sauf que vous pouvez créer autant de cadre que vous voulez. +
@@ -91,7 +93,7 @@ Pour la suite du projet, nous allons établir les différents modules dans chaqu
 Commençons par sélectionner +Salon+ dans le sélecteur *Pages* +
 Si vous cliquez sur le cadre, un popover pour la configuration du cadre apparaît: +
 
-image::../images/popovercadre.png[]
+image::popovercadre.png[]
 {nbsp} +
 
 Changeons +Titre+ par +Salon+, et sélectionnons l'image téléchargée avec le sélecteur *Image*.Pour le fonctionnement complet de ce popover voir <<popover_des_cadres,Popover des Cadres>>
@@ -105,9 +107,9 @@ Vous pouvez très bien injecter le code avec le bouton *Bootstrap* sans sauvegar
 
 Voici le résultat final: +
 
-image::../images/salondemo.jpg[]
-image::../images/cuisinedemo.jpg[]
-image::../images/chambredemo.jpg[]
+image::salondemo.jpg[]
+image::cuisinedemo.jpg[]
+image::chambredemo.jpg[]
 {nbsp} +
 
 A ce stade comme va vous le montrer la vidéo suivante votre Design est fonctionnel:
@@ -117,20 +119,20 @@ link:https://www.youtube.com/watch?v=6T9feK6wF1A&feature=youtu.be[Démo vidéo]
 ===== Page Home
 Cette page va servir de page d'accueil pour notre mode Design, elle permettra soit de centraliser des informations soit tout simplement afficher une image de votre maison en 3D, elle reste libre à votre imagination. Dans notre cas nous allons mettre divers informations :
 
-image::../images/generaldemo.png[]
+image::generaldemo.png[]
 {nbsp} +
 
 '''
 ===== Les lignes SVG
-Bien qu'à cette étape votre Design soit fonctionnel, il m'est apparu intéressant de fournir un système qui permettrait de localiser dans la pièce ou est votre widget (ou virtuel, etc...), et c'est tout naturellement que j'ai mis en place les *lignes SVG*. A partir du <<popover_des_cadres,Popover des Cadres>>, cliquez sur image:../images/plusb.png[] une nouvelle *ligne SVG* va apparaître en haut à droite de votre cadre et un nouveau popover est disponible.
+Bien qu'à cette étape votre Design soit fonctionnel, il m'est apparu intéressant de fournir un système qui permettrait de localiser dans la pièce ou est votre widget (ou virtuel, etc...), et c'est tout naturellement que j'ai mis en place les *lignes SVG*. A partir du <<popover_des_cadres,Popover des Cadres>>, cliquez sur image:plusb.png[] une nouvelle *ligne SVG* va apparaître en haut à droite de votre cadre et un nouveau popover est disponible.
 
-image::../images/popoversvg.png[]
+image::popoversvg.png[]
 {nbsp} +
 
 Ce dernier popover va vous servir à déplacer la *ligne SVG* à l'endroit désiré, une ligne SVG est composée de quatre parties, un petit rectangle appelé +Début+, une ligne appelée +1er partie+, une ligne appelée +2eme partie+ et un dernier rectangle appelé +Fin+. +
-Le D-Pad va servir à déplacer la ligne, le bouton central à valider, image:../images/trash.png[] en haut à droite du popover permet d'effacer la ligne SVG. Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer et d'utiliser le D-Pad. Le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de *_Jeedom_*(TM). +
+Le D-Pad va servir à déplacer la ligne, le bouton central à valider, image:trash.png[] en haut à droite du popover permet d'effacer la ligne SVG. Il suffit de sélectionner les parties de la ligne SVG que l'on veut déplacer et d'utiliser le D-Pad. Le dernier sélecteur sert à changer la couleur de la ligne SVG, elles correspondent aux différentes catégories de *_Jeedom_*(TM). +
 
-[icon="../images/tip.png"]
+[icon="tip.png"]
 [TIP]
 Appuyez sur touche +Shift+ en même temps multiplie le déplacement par 10.
 
@@ -138,7 +140,7 @@ Appuyez sur touche +Shift+ en même temps multiplie le déplacement par 10.
 
 Voici ce que la donne dans la +Cuisine+
 
-image::../images/cuisinesvg.jpg[]
+image::cuisinesvg.jpg[]
 {nbsp} +
 
 Il suffit de faire la même chose pour les autres pièces. +
@@ -147,7 +149,7 @@ Il suffit de faire la même chose pour les autres pièces. +
 ==== Conclusion
 Voila, votre thème et votre Design sont finalisés. Vous pouvez très bien le rajouter dans votre profil *_Jeedom_*(TM) pour y accéder directement. Les dernières modifications ont permis de rendre la page principale en lecture seule, et de pouvoir implémenter l'affichage automatique de la page 'Home'. Le plugin offre d'autres possibilités, le chapitre suivant va vous permettre de toutes les explorer. +
 
-[icon="../images/tip.png"]
+[icon="tip.png"]
 [TIP]
 Il est possible de créer des profils 'invité', il suffit au niveau du profil *_Jeedom_*(TM) de pointer vers la pièce désirée au lieu de la page principale, ce qui permettra à l'invité d'accéder à toutes les fonctions de la pièce sans avoir accès à la barre de menu et de ce faites au autres pages secondaires.
 
