--- a/doc/fr_FR/index.asciidoc
+++ b/doc/fr_FR/index.asciidoc
@@ -14,7 +14,7 @@ Au fur et à mesure du développement sont venu ce gréffer plusieurs autres mod
 
 D'autres modules pourront être implémenter selon les besoins de la communauté
 
-[icon=../images/tip.png"]
+[icon="../images/tip.png"]
 [TIP]
 Le Plugin est orienté pour être pris en main le plus simplement possible, il n'y a aucun besoin de connaître toutes les options pour l'utiliser, la configuration par défaut suffit pour une utilisation sur tablette. Il suffit de créer un thème de rajouter des boutons pour qu'il soit tout de suite utilisable.
 
