--- a/doc/en_US/index.asciidoc
+++ b/doc/en_US/index.asciidoc
@@ -6,39 +6,33 @@ Plugin for creating themes for the Design mode from the library Bootstrap
 
 === Description
 
-*_Jeedom_*(TM) Design ™ offers a mode that allows to create a free mode of view, but is not affordable for anyone, the purpose of the plugin is to create the template of your design mode, so that the only actions to do in Design view is the placement of widgets. The template includes a menu bar for selecting the "room" that we want to see in main frame, a main frame  will display the "room" asked and optional tray. +
+*_Jeedom_*(TM) Design ™ offers a mode that allows to create a free mode of view, but is not affordable for anyone, the purpose of the plugin is to create the template of your Design mode, so that the only actions to do in Design view is the placement of widgets. The template includes a menu bar for selecting the "room" that we want to see in main frame, a main frame  will display the "room" asked and optional tray. +
 As with the development came this are grafted several other modules that complement the plugin, but can be used as completely independent way for other plugin or functionality *_Jeedom_*(TM).
 
-. Le gestionnaire d'images
-. Les boutons Personnalisés
+. Images Manager
+. Custom Buttons
 
-D'autres modules pourront être implémenter selon les besoins de la communauté
+Other modules may be implemented according to the needs of the community.
 
 [icon="../images/tip.png"]
 [TIP]
-Le Plugin est orienté pour être pris en main le plus simplement possible, il n'y a aucun besoin de connaître toutes les options pour l'utiliser, la configuration par défaut suffit pour une utilisation sur tablette. Il suffit de créer un thème de rajouter des boutons pour qu'il soit tout de suite utilisable.
+The plugin is oriented to be taken as simply as possible, there is no need to know all the options for use, the default configuration is sufficient for tablet use. Just create a theme to add buttons to make it all usable on.
 
 [icon="../images/important.png"]
 [IMPORTANT]
-le plugin ne va pas créer le mode design tout seul, il faut avant de commencer avoir une idée de ce que l'on veut faire, divers exemples sont trouvable sur le forum officiel de *_Jeedom_*(TM) qui peuvent donner une idée des possibilité du mode Design
-
-==== Version de *_Jeedom_*(TM)
-Les besoins du plugin ont demandé des modifications au niveau du core de *_Jeedom_*(TM), comme le précise le plugin il nécéssite une version 1.150 de *_Jeedom_*(TM) pour fonctionner mais certaines fonctionnalités sont restreintes
-
-* entre 1.150 et 1.169 : Nombre de pages et ligne SVG limitées, Graph non fonctionnel
-* 1.170 : Graph non Fonctionnel
+the plugin will not create it alone design mode, you have before you start to get an idea of what you want to do, various examples are findable on the official forum of *_Jeedom_*(TM) that can give an idea of the possibility of Design mode.
 
 '''
-=== Création d'un thème Facile
-include::partie_1.asciidoc[Création d'un thème Facile]
+=== Creating a Easy Theme
+include::partie_1.asciidoc[Creating a Easy Theme]
 
 '''
-=== Options avancées
-include::partie_2.asciidoc[Options avancées]
+=== Advanced Options
+include::partie_2.asciidoc[Advanced Options]
 
 '''
-=== Modules additionnels
-include::partie_3.asciidoc[Modules additionnels]
+=== Additional modules
+include::partie_3.asciidoc[Additional modules]
 
 '''
 === FAQ
