--- a/doc/en_US/faq.asciidoc
+++ b/doc/en_US/faq.asciidoc
@@ -1,3 +1,3 @@
 [qanda]
-Je ne comprends pas l'utilité de ce plugin::
-    Lisez la documentation.
+I don't understand the use of this plugin::
+    Read the documentation.
