--- a/doc/en_US/partie_1.asciidoc
+++ b/doc/en_US/partie_1.asciidoc
@@ -3,19 +3,19 @@
 '''
 ==== Création
 
-Pour appréhender le plugin nous allons développer dans cette partie la création d'un thème le plus simple possible, en utilisant le moins d'options possible. Pour commencer, nous allons définir la nature de notre projet :
+To understand the plugin we will develop in this part a theme as simple as possible, using the least possible options. To begin, let's define the nature of our project:
 
-* Nous adopterons le format Tablette horizontale (paramètres par défaut).
-* La barre de menu sera située en 'Haut' (paramètres par défaut).
+* We will adopt the horizontal size pad (default settings).
+* The menu bar will be located in High (default settings).
 * Barre d'état apparente (paramètres par défaut).
-* Les entrées de la barre de menu seront des Boutons (paramètres par défaut).
-* Le design comportera 3 Pièces composé comme suis: RdC (Salon, Cuisine), Chambre.
-* Mono-cadre (paramètres par défaut).
-* On configura un style avec une bordure et une ombre pour un rendu visuel.
+* Tray visible (default settings).
+* The design will include three parts composed as: Ground floor (Living room, Kitchen), Bedroom.
+* Single frame (default settings).
+* We configure style with a border and a shadow for rendering.
 
-Nous allons commencer par créer un thème, cliquer sur image:ajout.png[] .Changeons le titre pour un message de bienvenue, remplacez dans le premier popover +Menu+ par +Bienvenue dans Notre Espace Domotique+. Le thème que nous désirons et pratiquement créer, ils nous restent plus qu'a configurer les <<ajoutedition,boutons>> et le <<popover_de_style,style>>. +
-Cliquez sur *Boutons* et appuyez sur image:plus.png[] pour créer un nouveau bouton. Notre premier bouton est un sous-menu, entrez +RdC+ dans le champ *Nom* et cliquez sur *Sous-menu* pour affichez les sous-entrées, cliquez sur image:plus.png[] pour ajouter une autre sous-entrée, remplissez chaque entrée par +Salon+ et +Cuisine+ puis validez, notre premier bouton est créé. Le deuxième bouton est plus simple entrez +Chambre+ dans le champ *Nom* et validez. +
-
+We will start by creating a theme, click on image:ajout.png[]. Change the title to a welcome message, replace in the first popover +menu+ by +Welcome to Our Home automation space+. The theme that we want to create and practically, they we remain more than to configure <<ajoutedition,buttons>> and <<popover_de_style,style>>. +
+Click *Buttons* and press image:plus.png[] to create a new button. Our first button is a submenu, enter +Ground floor+ in the field Name and click submenu to display the sub-entries, click image:plus.png[] to add another sub-entry, fill each entry with *Living room* and *Kitchen* and validate our first button is created. The second button is simpler enter *Bedroom* in the field name and click OK. +
+ 
 Maintenant que nos boutons sont créés, nous allons appliquer un style pour un meilleur rendu visuel, ici chacun fait ce qu'il veut, pour notre démo j'ai choist les paramètres ainsi :
 
 * Bordure : *Taille*: +5+, *Rayon*: +5+, *Style*: +groove+, *Couleur*: +Bleu+
